fix: reformat appointment facade